objects/Selling_Product__c.object
<CustomObject>
    <fields>
        <fullName>Account_External_Id__c</fullName>
        <label>Account External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Selling Products</relationshipLabel>
        <relationshipName>Selling_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Available_Quantity__c</fullName>
        <formula>Quantity__c -  Ordered_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Camera__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Camera</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drive_Type__c</fullName>
        <label>Drive Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SSD</fullName>
                </value>
                <value>
                    <fullName>HDD</fullName>
                </value>
                <value>
                    <fullName>SSD+HDD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NFC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NFC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation_system__c</fullName>
        <label>Operation system</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOS</fullName>
                </value>
                <value>
                    <fullName>Win 10</fullName>
                </value>
                <value>
                    <fullName>Win 8</fullName>
                </value>
                <value>
                    <fullName>Mac OS</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>iOs</fullName>
                </value>
                <value>
                    <fullName>Tizen</fullName>
                </value>
                <value>
                    <fullName>WatchOS</fullName>
                </value>
                <value>
                    <fullName>Ubuntu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ordered_Quantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform_support__c</fullName>
        <label>Platform support</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Win</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>iOs</fullName>
                </value>
                <value>
                    <fullName>Mac OS X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>quantity on the warehouse</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIM_Type__c</fullName>
        <label>SIM Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>nano-SIM</fullName>
                </value>
                <value>
                    <fullName>micro-SIM</fullName>
                </value>
                <value>
                    <fullName>mini-SIM</fullName>
                </value>
                <value>
                    <fullName>SIM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smart_TV_option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smart-TV option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smart_TV_version__c</fullName>
        <label>Smart-TV version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>LG webOS</fullName>
                </value>
                <value>
                    <fullName>Samsung Tizen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Selling Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Selling Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selling Products</pluralLabel>
    <recordTypes>
        <fullName>Laptop</fullName>
        <active>true</active>
        <label>Laptop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Smartphone</fullName>
        <active>true</active>
        <label>Smartphone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Smartwatch</fullName>
        <active>true</active>
        <label>Smartwatch</label>
    </recordTypes>
    <recordTypes>
        <fullName>TV</fullName>
        <active>true</active>
        <label>TV</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Order_Quantity_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>Ordered_Quantity__c  &gt;  Quantity__c</errorConditionFormula>
        <errorMessage>Not enough available products</errorMessage>
    </validationRules>
</CustomObject>